--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,25 +1,29 @@
 <router-outlet></router-outlet>
-<app-sidebar>
-</app-sidebar>
-<app-navbar></app-navbar>
-
-<section class="row">
-
-    <div class="col-3">
-        
-        
-    </div>
-    <div class="col-9">
-        <div class="scroll-auto-hope"></div>
-    </div>
-    <div>
-        
-            <footer class="">
-                <div class="d-flex justify-content-center align-items-center">
-                    <label class="vibra con los mejores eventos"></label>
-                </div>
-            </footer>
-        
-    </div>
+<div class="main-container">
+    <app-sidebar>
+    </app-sidebar>
+    <app-navbar></app-navbar>
     
-</section>
+    
+    <section class="row">
+    
+        <div class="col-3">
+            
+            
+        </div>
+        <div class="col-9">
+            <div class="scroll-auto-hope"></div>
+        </div>
+        <div>
+            
+                <footer class="">
+                    <div class="d-flex justify-content-center align-items-center">
+                        <label class="vibra con los mejores eventos"></label>
+                    </div>
+                </footer>
+            
+        </div>
+        
+    </section>
+    
+</div>
