--- a/frontend/src/app/components/navbar/navbar.component.css
+++ b/frontend/src/app/components/navbar/navbar.component.css
@@ -6,7 +6,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    
 }
 body{
     height: 100vh;
@@ -16,7 +16,7 @@ body{
 }
 .nav {
     border-radius: 12px;
-    background: linear-gradient(to right, #e71752, #d21543, #e90133);
+    background: #ffffff;
   }
   .nav {
     display: flex;
@@ -35,7 +35,7 @@ body{
   }
   .nav-content {
     display: flex;
-    height: 120px;
+    height: auto;
     align-items: center;
     justify-content: center; /* Agregamos esta línea para centrar los elementos */
     list-style: none;
@@ -46,7 +46,7 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 120px;
+    height: 60px;
     width: 95px;
     text-decoration: none;
     transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
@@ -66,7 +66,7 @@ body{
     position: absolute;
     font-size: 12px;
     font-weight: 500;
-    color: #e8b34b;
+    color: #414141;
     opacity: 0;
     transform: translateY(32px);
     transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
@@ -81,7 +81,7 @@ body{
     height: 36px;
     width: 36px;
     background-color: #e3a81f;
-    border: 6px solid #4070F4;
+    border: 6px solid #E8F044;
     border-radius: 50%;
     transform: translateX(-50%);
     transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
@@ -94,18 +94,7 @@ body{
     height: 24px;
     width: 19px;
 }
-.indicator::before{
-    left: -22px;
-    background-color: #782bbb;
-    border-top-right-radius: 25px;
-    box-shadow: 1px -13px #4070F4;
-}
-.indicator::after{
-    right: -22px;
-    background-color: #7f9c15;
-    border-top-left-radius: 25px;
-    box-shadow: -1px -13px #4070F4;
-}
+
 /* Resto de los estilos... */
 
 .nav {
@@ -131,6 +120,10 @@ body{
   }
 
   .indicator {
-    background-color: blue;
+    background-color: #E8F044;
     /* Otros estilos... */
+  }
+
+  .logo-container{
+    margin: 30px;
   }
