--- a/frontend/src/app/components/login/login.component.css
+++ b/frontend/src/app/components/login/login.component.css
@@ -1,23 +1,14 @@
-.error {
-    color: red;
-    font-size: 0.8em;
-    margin-top: 2px;
-  }
-
-  .containerform{
-    margin-top: 130px;
-  }
-
-  .login-box {
+.login-box {
     position: absolute;
     top: 50%;
     left: 50%;
     width: 400px;
-    height: 850px;
     padding: 40px;
+    height: 850px;
     transform: translate(-50%, -50%);
     background: rgba(24, 20, 20, 0.987);
     box-sizing: border-box;
+    box-shadow: 0 15px 25px rgba(0,0,0,.6);
     border-radius: 10px;
   }
   
@@ -38,48 +29,36 @@
   }
   
   .login-box .user-box label {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 10px 0;
-    font-size: 16px;
-    color: #fff;
-    pointer-events: none;
-    transition: .5s;
-  }
-  
-  .login-box .user-box input:focus ~ label,
-  .login-box .user-box input:valid ~ label {
-    top: -20px;
+    position: relative;
+    top: 10px;
     left: 0;
     color: #bdb8b8;
     font-size: 12px;
   }
   
-  .login-box form a {
-    position: relative;
-    display: inline-block;
-    padding: 10px 20px;
-    color: #ffffff;
-    font-size: 16px;
-    text-decoration: none;
-    text-transform: uppercase;
-    overflow: hidden;
-    transition: .5s;
-    margin-top: 40px;
-    letter-spacing: 4px
+
+  
+  @keyframes btn-anim1 {
+    0% {
+      left: -100%;
+    }
+  
+    50%,100% {
+      left: 100%;
+    }
   }
 
-  .title-form{
-    color: white;
-    margin-bottom: 60px;
-  }
   .header-container{
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 30px;
     padding-top: 40px;
+    margin-bottom: 60px;
+  }
+
+  .title-form{
+    color: #fff;
   }
 
   .boton {
@@ -135,4 +114,5 @@
     justify-content: center;
     align-items: center;
   }
+  
   
