--- a/frontend/src/app/components/evento-wasimodo/evento-wasimodo.component.html
+++ b/frontend/src/app/components/evento-wasimodo/evento-wasimodo.component.html
@@ -7,11 +7,35 @@
     <ng-container *ngFor="let evento of listaEventos">
       <ng-template carouselSlide>
         <div class="image-container">
-          <img [src]="evento.imagen" alt="Portrait Image" class="carousel-image-portrait" />
-          <h3>{{ evento.nombre }}</h3>
+          <div class="card">
+            <div class="first-content">
+              <span>
+                <img [src]="evento.imagen" alt="Portrait Image" class="carousel-image-portrait" />
+              </span>
+            </div>
+            <div class="second-content">
+          <span>
+            <img src="../../../assets/img/logo2.svg" alt="" class="logocard">
+            <h3>{{ evento.nombre }}</h3>
+          </span>
+            </div>
+          
+          
+          </div>
+         
+          
         </div>
       </ng-template>
     </ng-container>
   </owl-carousel-o>
 
+</div>
+
+<div class="loader-container col-12">
+<svg viewBox="0 0 240 240" height="240" width="240" class="loader">
+	<circle stroke-linecap="round" stroke-dashoffset="-330" stroke-dasharray="0 660" stroke-width="20" stroke="#000" fill="none" r="105" cy="120" cx="120" class="loader-ring loader-ring-a"></circle>
+	<circle stroke-linecap="round" stroke-dashoffset="-110" stroke-dasharray="0 220" stroke-width="20" stroke="#000" fill="none" r="35" cy="120" cx="120" class="loader-ring loader-ring-b"></circle>
+	<circle stroke-linecap="round" stroke-dasharray="0 440" stroke-width="20" stroke="#000" fill="none" r="70" cy="120" cx="85" class="loader-ring loader-ring-c"></circle>
+	<circle stroke-linecap="round" stroke-dasharray="0 440" stroke-width="20" stroke="#000" fill="none" r="70" cy="120" cx="155" class="loader-ring loader-ring-d"></circle>
+</svg>
 </div>
