--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -9,7 +9,7 @@
           
         <div class="brand-wrapper">
             <span class="logo-container">
-                <img src="../../../assets/img/logo2.svg" alt="" width="130px"> 
+                <img src="../../../assets/img/logo2.svg" alt="" width="130px" class="logoimg"> 
             </span>
             </div>
         
@@ -25,7 +25,7 @@
             <li class="nav-list" (click)="openOffCanvas('offcanvasExample2')">
                    <span class="link-item">
                     <i class='link-icon'>
-                        <img src="../../../assets/img/login-icon.svg" alt="">
+                        <img src="../../../assets/img/newUser.svg" alt="">
                     </i>
                     <span class="link-text">Registro</span>
                    </span>
