created styles to cards

--- a/frontend/src/app/components/evento-wasimodo/evento-wasimodo.component.html
+++ b/frontend/src/app/components/evento-wasimodo/evento-wasimodo.component.html
@@ -31,11 +31,34 @@
 
 </div>
 
-<div class="loader-container col-12">
-<svg viewBox="0 0 240 240" height="240" width="240" class="loader">
+<div class="loader-container row align-items-end">
+
+  <div class="containerbutton col">
+    <button class="cta">
+      <span class="hover-underline-animation"> Made in bogotá </span>
+    </button>
+  </div>
+
+<svg viewBox="0 0 240 240" height="240" width="240" class="loader col">
 	<circle stroke-linecap="round" stroke-dashoffset="-330" stroke-dasharray="0 660" stroke-width="20" stroke="#000" fill="none" r="105" cy="120" cx="120" class="loader-ring loader-ring-a"></circle>
 	<circle stroke-linecap="round" stroke-dashoffset="-110" stroke-dasharray="0 220" stroke-width="20" stroke="#000" fill="none" r="35" cy="120" cx="120" class="loader-ring loader-ring-b"></circle>
 	<circle stroke-linecap="round" stroke-dasharray="0 440" stroke-width="20" stroke="#000" fill="none" r="70" cy="120" cx="85" class="loader-ring loader-ring-c"></circle>
 	<circle stroke-linecap="round" stroke-dasharray="0 440" stroke-width="20" stroke="#000" fill="none" r="70" cy="120" cx="155" class="loader-ring loader-ring-d"></circle>
 </svg>
+
+<div class="containerbuttons col">
+  <button class="cta">
+    <span class="hover-underline-animation"> Contacto </span>
+    <svg viewBox="0 0 46 16" height="10" width="30" xmlns="http://www.w3.org/2000/svg" id="arrow-horizontal">
+        <path transform="translate(30)" d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z" data-name="Path 10" id="Path_10"></path>
+    </svg>
+  </button>
+  <button class="cta">
+    <span class="hover-underline-animation"> Noticias </span>
+    <svg viewBox="0 0 46 16" height="10" width="30" xmlns="http://www.w3.org/2000/svg" id="arrow-horizontal">
+        <path transform="translate(30)" d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z" data-name="Path 10" id="Path_10"></path>
+    </svg>
+  </button>
+</div>
+
 </div>
