added some details

--- a/frontend/src/app/components/evento-wasimodo/evento-wasimodo.component.html
+++ b/frontend/src/app/components/evento-wasimodo/evento-wasimodo.component.html
@@ -1,5 +1,6 @@
 <div class="container-events">
-  <owl-carousel-o
+
+<owl-carousel-o
   #carousel
   [options]="customOptions"
   (translate)="onCarouselTranslate($event)"
@@ -35,9 +36,10 @@
 
   <div class="containerbutton col">
     <button class="cta">
-      <span class="hover-underline-animation"> Made in bogotá </span>
+      <span class="hover-underline-animation"> Made in Bogotá </span>
     </button>
   </div>
+
 
 <svg viewBox="0 0 240 240" height="240" width="240" class="loader col">
 	<circle stroke-linecap="round" stroke-dashoffset="-330" stroke-dasharray="0 660" stroke-width="20" stroke="#000" fill="none" r="105" cy="120" cx="120" class="loader-ring loader-ring-a"></circle>
