--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -86,7 +86,7 @@
         <script src="navbar.component.ts"></script>
     </nav>
 
-    <app-sidebar [offcanvasId]="'offcanvasExample1'" [offcanvasTitle]="'Registro de eventos'">
+    <app-sidebar [offcanvasId]="'offcanvasExample1'">
         <app-registroevents></app-registroevents>
     </app-sidebar>
     <app-sidebar [offcanvasId]="'offcanvasExample2'" [offcanvasTitle]="'Registro de usuarios'">
