--- a/frontend/src/app/components/evento-wasimodo/evento-wasimodo.component.css
+++ b/frontend/src/app/components/evento-wasimodo/evento-wasimodo.component.css
@@ -246,14 +246,14 @@
   width: 190px;
   height: 254px;
   transition: all 0.4s;
-  border-radius: 5px;
+  border-radius: 0px;
   font-size: 30px;
   font-weight: 900;
   margin-top: 100px;
 }
 
 .card:hover {
-  border-radius: 10px;
+  border-radius: 0px;
   cursor: pointer;
   transform: scale(1.2);
 }
@@ -264,7 +264,7 @@
   transition: all 0.4s;
  
   opacity: 1;
-  border-radius: 15px;
+  border-radius: 0px;
 }
 
 .card:hover .first-content {
@@ -279,11 +279,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 10px;
+  border-radius: 0px;
   transition: all 0.4s;
   font-size: 0px;
   transform: rotate(90deg) scale(-1);
-  border: solid 1px #DC2ADE;
+  border: solid 1px #303030;
 }
 
 .card:hover .second-content {
