enlace de la nadvar con las categorias

--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -72,9 +72,10 @@
                     <span class="link-text">Registra un evento</span>
             </li>
 
-            <li class="nav-list link-item">
+            <li class="nav-list link-item " routerLink="productos">
 
-                    <i class='link-icon'>
+                    <i class='link-icon' >
+                    
                         <img src="../../../assets/img/menu-icon.svg" alt="">
                     </i>
                     <span class="link-text">Menú</span>
