--- a/frontend/src/app/components/productos/productos.component.html
+++ b/frontend/src/app/components/productos/productos.component.html
@@ -1,13 +1,15 @@
-<ul #items>
-	<li class="letrasUL" id="item1Menu">Sociales</li>
-	<li class="letrasUL" id="itemMenu2">Festivales</li>
-	<li class="letrasUL" id="itemMenu3">Culturales</li>
-	<li class="letrasUL" id="itemMenu4">Familiares</li>
-	<li class="letrasUL" id="itemMenu5">Deportivos</li>
-	<li class="letrasUL" id="itemMenu6">Empresariales</li>
-</ul>
+<div class="my-4 titulos">
+	<ul #items>
+		<li class="letrasUL fs-3" id="item1Menu">Sociales</li>
+		<li class="letrasUL fs-3" id="itemMenu2">Festivales</li>
+		<li class="letrasUL fs-3" id="itemMenu3">Culturales</li>
+		<li class="letrasUL fs-3" id="itemMenu4">Familiares</li>
+		<li class="letrasUL fs-3" id="itemMenu5">Deportivos</li>
+		<li class="letrasUL fs-3" id="itemMenu6">Empresariales</li>
+	</ul>
+</div>
 
-<div class="container slider-container" style="translate: 800px;">
+<div class="container slider-container" style="translate: 300px;">
 	<section class="ps-3">
 		<div class="container" #eventos>
 			<div class="item" id="evento1">
