[add] add multer and register events with images

--- a/frontend/src/app/components/productos/productos.component.html
+++ b/frontend/src/app/components/productos/productos.component.html
@@ -1,11 +1,11 @@
 <div class="my-4 titulos">
 	<ul #items>
-		<li class="letrasUL fs-3" id="item1Menu">Sociales</li>
-		<li class="letrasUL fs-3" id="itemMenu2">Festivales</li>
-		<li class="letrasUL fs-3" id="itemMenu3">Culturales</li>
-		<li class="letrasUL fs-3" id="itemMenu4">Familiares</li>
-		<li class="letrasUL fs-3" id="itemMenu5">Deportivos</li>
-		<li class="letrasUL fs-3" id="itemMenu6">Empresariales</li>
+		<a style="cursor: pointer;" routerLink="/event/sociales"><li class="letrasUL fs-3" id="item1Menu">Sociales</li></a>
+		<a style="cursor: pointer;" routerLink="/event/familiares"><li class="letrasUL fs-3" id="itemMenu2">Familiares</li></a>
+		<a style="cursor: pointer;" routerLink="/event/festivales"><li class="letrasUL fs-3" id="itemMenu3">Fesitivales</li></a>
+		<a style="cursor: pointer;" routerLink="/event/deportivos"><li class="letrasUL fs-3" id="itemMenu4">Deportivos</li></a>
+		<a style="cursor: pointer;" routerLink="/event/culturales"><li class="letrasUL fs-3" id="itemMenu5">Culturales</li></a>
+		<a style="cursor: pointer;" routerLink="/event/empresariales"><li class="letrasUL fs-3" id="itemMenu6">Empresariales</li></a>
 	</ul>
 </div>
 
