--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -14,7 +14,7 @@
             </div>
         
         <ul class="nav-content">
-            <li class="nav-list" routerLink="/eventowasimodo">
+            <li class="nav-list" routerLink="/eventos">
                     <span class="link-item active"> 
                         <i class='link-icon'>
                             <img src="../../../assets/img/iconamoon_home.svg" alt="">
@@ -80,6 +80,14 @@
                     <span class="link-text">Menú</span>
 
             </li>
+            <li class="nav-list" routerLink="/gestion-productos-vista">
+                <span class="link-item">
+                 <i class='link-icon'>
+                     <img src="../../../assets/img/newUser.svg" alt="">
+                 </i>
+                 <span class="link-text">Registro</span>
+                </span>
+         </li>
 
             <span class="indicator"></span>
         </ul>
