--- a/frontend/src/app/components/admin/gestion-productos-formulario/gestion-productos-formulario.component.html
+++ b/frontend/src/app/components/admin/gestion-productos-formulario/gestion-productos-formulario.component.html
@@ -1,1 +1,77 @@
-<p>gestion-productos-formulario works!</p>
+<!-- 
+<section class="container my-5 ">
+    <h1>Editar evento</h1>
+  <form [FormGroup]="EventoForm" (ngSubmit)="registrarEditarEvento()" class="row formularioEvento" style="border: solid 2px; padding: 50px; height: 100%; width: 80%;margin: 50px;">
+  <div class="d-flex justify-content-between">
+    <div class="col-md-4">
+      <label  class="form-label">Nombre del evento:
+        <input type="text" class="form-control" id="nombre"  formControlName="nombre">
+      </label>
+      <div class="text-danger" *ngIf="eventoform.get('nombre')?.hasError('required') && eventoform.get('nombre')?.touched" >El nombre del evento es requerido</div>
+    </div>
+    <div class="col-md-4 ">
+      <div class="text-danger" style="font-size: 15px;" *ngIf="eventoform.get('categoria')?.hasError('required') && eventoform.get('categoria')?.touched" >Por favor seleccione una categoria para el evento</div>
+      <select class="form-select selecCategoria" formControlName="categoria" >
+        <option selected disabled value="">Categoria</option>
+        <option value="concierto">Concierto</option>
+        <option value="festival">Festival</option>
+        <option value="deportes">Deporte</option>
+        <option value="sociales">Sociale</option>
+        <option value="cultural">cultural</option>
+        <option value="empresarial">Empresarial</option>
+      </select>
+    </div>
+  
+    <div class="col-md-4">
+      <div class="input-group ">
+      <label  class="form-label">fecha:
+        <input type="date" class="form-control " placeholder="####" id="fecha"  formControlName="fecha">
+      </label>
+      <div class="text-danger" *ngIf="eventoform.get('fecha')?.hasError('required') && eventoform.get('fecha')?.touched" >La fecha es requerida</div>
+        </div>
+      </div>
+  </div>
+  <div class="d-flex justify-content-between">
+    <div class="col-md-3">
+      <label  class="form-label">Hora:</label>
+      <input type="time" class="form-control" id="hora" formControlName="hora">
+      <div class="text-danger" *ngIf="eventoform.get('hora')?.hasError('required') && eventoform.get('hora')?.touched" >La Hora es requerida</div>
+    </div>
+    <div class="col-md-5">
+      <label  class="form-label">lugar:</label>
+      <input type="text" class="form-control" id="lugar" formControlName="lugar">
+      <div class="text-danger" *ngIf="eventoform.get('lugar')?.hasError('required') && eventoform.get('lugar')?.touched" >El lugar es requerido</div>
+    </div>
+    <div class="col-md-3">
+      <label  class="form-label">Correo electronico:</label>
+      <input type="mail" class="form-control" id="correo" formControlName="correo" >
+      <div class="text-danger" *ngIf="eventoform.get('lugar')?.hasError('required') && eventoform.get('lugar')?.touched" >El correo electronico es requerido</div>
+    </div>
+  </div>
+      <div class="mb-3 my-1">
+        <label class="form-label">Descripcion:</label>
+        <textarea class="form-control" id="descripcion" placeholder="..."formControlName="descripcion" ></textarea>
+        <div class="text-danger" *ngIf="eventoform.get('descripcion')?.hasError('required') && eventoform.get('descripcion')?.touched" >La descripcion es requerida</div>
+        <div class="text-danger" *ngIf="eventoform.get('descripcion')?.hasError('maxlength') && eventoform.get('descripcion')?.touched" >maximo 420 caracteres</div>
+      </div>
+      <div>
+        <div class="mb-3">
+          <input type="file" class="form-control" aria-label="file example" >
+        </div>
+      </div>
+      <div class="col-md-3 my-3">
+        <label class="form-label">Organizador:</label>
+        <input type="text" class="form-control " id="organizador" aria-describedby="validationServer05Feedback" formControlName="organizador">
+        <div class="text-danger" *ngIf="eventoform.get('organizador')?.hasError('required') && eventoform.get('organizador')?.touched" >El organizador es requerida </div>
+      </div>
+      <div class=" col-3 form-check" style="position: relative; top: 60px; translate: 50px;">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <label class="form-check-label" for="flexCheckDefault">
+          Activo
+        </label>
+      </div>
+      <div class="col-4" style="position: relative; top: 50px;">
+        <button type="submit" class="  btn btn-dark text-light fw-bold" (click)="registrarEditarEvento()">{{textoBoton}}</button>
+      </div>
+    </form>
+  </section> -->
